@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.deccandelight"
-version="1.2.0"
+version="1.2.1"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
@@ -21,6 +21,6 @@ provider-name="Gujal">
 	<platform>all</platform>
 	<website>https://forums.tvaddons.ag/addon-releases/49105-deccan-delight-indian-entertainment.html</website>
 	<disclaimer>This addon scrapes content from various websites around the Internet and is not liable for any content hosted on those sites</disclaimer>
-	<news>[B]Updated 12 May 2017[/B]</news>
+	<news>[B]Updated 21 May 2017[/B]</news>
 </extension>
 </addon>
