@@ -1,3 +1,7 @@
+[B]Version 1.2.1 - 21 May 2017[/B]
+- ABCMalayalam Fix
+- Mersalaayitten Fix
+
 [B]Version 1.2.0 - 12 May 2017[/B]
 - Desitashan Fix
 - Andhrawatch Fix
